test/TestPhases/typechecker/invalid/SideEffect2.blc
module

function sideffect()(x: int32) returns bool
    x = x + 1
    return true
end

activity main ()()
    var x: int32 = 0
    while sideffect()(x) repeat 
        x = x * 2
        await true
    end
    await false
end
